--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -243,7 +243,7 @@
 
             <div class="film-modal__body">
                 <div class="film-modal__section">
-                    <h3>📝 Описание</h3>
+                    <h3>📝 О встрече</h3>
                     <p id="modal-film-description"></p>
                 </div>
 
