--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -52,8 +52,8 @@
         <section class="hero-container"></section>
 
         <!-- Предстоящая встреча -->
-        <section id="next-meeting" class="next-meeting section">
-            <div class="container">
+        <section id="next-meeting" class="next-meeting section section--bg-1">
+            <div class="container section__content">
                 <h2 class="section-title">Ближайшая встреча</h2>
                 <div id="next-meeting-container" class="next-meeting__content">
                     <!-- Сюда будет загружена информация о встрече -->
@@ -66,8 +66,8 @@
         </section>
 
         <!-- Карта -->
-        <section class="map-section section">
-            <div class="container">
+        <section class="map-section section section--bg-2">
+            <div class="container section__content">
                 <h2 class="section__title fade-in">Где мы собираемся</h2>
                 <div class="map-container fade-in delay-1">
                     <div id="map" class="map"></div>
@@ -88,10 +88,10 @@
         </section>
 
         <!-- О киноклубе -->
-        <section id="about" class="about section">
-            <div class="container">
+        <section id="about" class="about section section--bg-3">
+            <div class="container section__content">
                 <h2 class="section__title fade-in">О нашем киноклубе</h2>
-                
+
                 <!-- Обёртка для карточек FAQ -->
                 <div class="faq-grid fade-in delay-1">
                     <!-- Колонка 1 -->
@@ -101,7 +101,8 @@
                                 <span class="faq-icon" aria-hidden="true">🎬</span>
                                 <h3 class="faq-title">Кто мы?</h3>
                             </div>
-                            <p class="faq-answer">Команда киноманов, которые каждую неделю собираются потрещать о фильме.</p>
+                            <p class="faq-answer">Команда киноманов, которые каждую неделю собираются потрещать о
+                                фильме.</p>
                         </article>
                         <article class="faq-item">
                             <div class="faq-question">
@@ -119,8 +120,10 @@
                                 <span class="faq-icon" aria-hidden="true">🗣️</span>
                                 <h3 class="faq-title">Как проходят встречи?</h3>
                             </div>
-                            <p class="faq-answer">Фильм смотрим дома, а на встрече — споры, восторги и "как это вообще можно
-                                было снять?!". В начале — мини-лекция о фильме, потом — громкие обсуждения. В конце ставим
+                            <p class="faq-answer">Фильм смотрим дома, а на встрече — споры, восторги и "как это вообще
+                                можно
+                                было снять?!". В начале — мини-лекция о фильме, потом — громкие обсуждения. В конце
+                                ставим
                                 оценки и выводим "клубный рейтинг".</p>
                         </article>
                         <article class="faq-item">
@@ -140,7 +143,8 @@
                                 <span class="faq-icon" aria-hidden="true">🚪</span>
                                 <h3 class="faq-title">Как вступить?</h3>
                             </div>
-                            <p class="faq-answer">Просто приходи! Узнаешь нас по фото в групке или по горящим глазам.</p>
+                            <p class="faq-answer">Просто приходи! Узнаешь нас по фото в групке или по горящим глазам.
+                            </p>
                         </article>
                         <article class="faq-item">
                             <div class="faq-question">
@@ -172,8 +176,8 @@
         </section>
 
         <!-- Топ фильмов -->
-        <section id="top-films" class="movies section">
-            <div class="container">
+        <section id="top-films" class="movies section section--bg-4">
+            <div class="container section__content">
                 <h2 class="section__title fade-in">Наши топы</h2>
 
                 <!-- Кнопки управления -->
@@ -232,8 +236,8 @@
         </section>
 
         <!-- Контакты -->
-        <section id="contacts" class="contacts section">
-            <div class="container">
+        <section id="contacts" class="contacts section section--bg-3">
+            <div class="container section__content">
                 <h2 class="section__title">Контакты</h2>
                 <div class="contacts__grid">
                     <article class="contact-card">
@@ -261,13 +265,13 @@
         </section>
 
         <!-- Секция архива фильмов -->
-        <section id="film-archive" class="film-archive section">
-            <div class="container">
+        <section id="film-archive" class="film-archive section section--bg-2">
+            <div class="container section__content">
                 <h2 class="section__title fade-in">Архив наших работ</h2>
                 <div id="works-container" class="video-posters-grid fade-in delay-1" aria-live="polite">
                     <!-- Работы будут здесь -->
                 </div>
-                
+
                 <h2 class="section__title section__title--sub fade-in delay-2">История обсуждений</h2>
                 <div id="films-container" class="film-grid fade-in delay-3" aria-live="polite">
                     <!-- Фильмы будут здесь -->
@@ -290,6 +294,11 @@
         <!-- Содержимое панели -->
     </div>
 
+    <!-- Движущаяся кинолента -->
+    <div class="film-reel-overlay">
+        <div class="film-perforations"></div>
+    </div>
+
     <script src="../js/script.js"></script>
     <script src="../modul/navigation.js"></script>
     <script src="../modul/hero-section.js"></script>
@@ -304,4 +313,5 @@
     <script src="../modul/weather-module.js"></script>
     <script src="../modul/vk-sync-module.js"></script>
 </body>
+
 </html>
