--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -30,14 +30,21 @@
     <!-- Шапка -->
     <header class="header">
         <div class="header__inner container">
+            <!-- Логотип слева -->
             <a href="index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
                 <div class="logo__icon"></div>
                 <span class="logo__text">ОДИССЕЯ</span>
             </a>
 
-            <!-- Контейнер для навигации -->
+            <!-- Виджет погоды посередине -->
+            <div class="weather-widget">
+                <!-- Содержимое виджета -->
+            </div>
+
+            <!-- Навигация справа -->
             <nav class="nav-container"></nav>
 
+            <!-- Кнопка мобильного меню -->
             <button class="mobile-menu-btn" aria-label="Меню" aria-expanded="false">
                 <span class="burger-line"></span>
                 <span class="burger-line"></span>
