--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -101,89 +101,76 @@
         </section>
 
         <!-- О киноклубе -->
-        <section id="about" class="about section section--bg-3">
-            <div class="container section__content">
-                <h2 class="section__title fade-in">О нашем киноклубе</h2>
+        <section id="about" class="about">
+            <div class="container">
+                <h2 class="section__title">О нашем киноклубе</h2>
 
-                <!-- Обёртка для карточек FAQ -->
-                <div class="faq-grid fade-in delay-1">
-                    <!-- Колонка 1 -->
-                    <div class="faq-column">
-                        <article class="faq-item">
-                            <div class="faq-question">
-                                <span class="faq-icon" aria-hidden="true">🎬</span>
-                                <h3 class="faq-title">Кто мы?</h3>
-                            </div>
+                <!-- FAQ сетка -->
+                <div class="faq-grid">
+                    <article class="faq-item">
+                        <div class="faq-icon">🎬</div>
+                        <div class="faq-content">
+                            <h3 class="faq-title">Кто мы?</h3>
                             <p class="faq-answer">Команда киноманов, которые каждую неделю собираются потрещать о
                                 фильме.</p>
-                        </article>
-                        <article class="faq-item">
-                            <div class="faq-question">
-                                <span class="faq-icon" aria-hidden="true">💸</span>
-                                <h3 class="faq-title">Это платно?</h3>
-                            </div>
+                        </div>
+                    </article>
+
+                    <article class="faq-item">
+                        <div class="faq-icon">💸</div>
+                        <div class="faq-content">
+                            <h3 class="faq-title">Это платно?</h3>
                             <p class="faq-answer">Нет, но если не купишь кофе — мы тебя осуждаем (шутка… или нет).</p>
-                        </article>
-                    </div>
+                        </div>
+                    </article>
 
-                    <!-- Колонка 2 -->
-                    <div class="faq-column">
-                        <article class="faq-item">
-                            <div class="faq-question">
-                                <span class="faq-icon" aria-hidden="true">🗣️</span>
-                                <h3 class="faq-title">Как проходят встречи?</h3>
-                            </div>
-                            <p class="faq-answer">Фильм смотрим дома, а на встрече — споры, восторги и "как это вообще
-                                можно
-                                было снять?!". В начале — мини-лекция о фильме, потом — громкие обсуждения. В конце
-                                ставим
-                                оценки и выводим "клубный рейтинг".</p>
-                        </article>
-                        <article class="faq-item">
-                            <div class="faq-question">
-                                <span class="faq-icon" aria-hidden="true">👑</span>
-                                <h3 class="faq-title">Кто выбирает фильмы?</h3>
-                            </div>
-                            <p class="faq-answer">Наш "кино-диктатор", но иногда он снисходит до мнения народа. В день
-                                рождения твой выбор — закон!</p>
-                        </article>
-                    </div>
+                    <article class="faq-item">
+                        <div class="faq-icon">🗣️</div>
+                        <div class="faq-content">
+                            <h3 class="faq-title">Как проходят встречи?</h3>
+                            <p class="faq-answer">Смотрим фильм дома, а встречаемся для обсуждения. Мини-лекция, спорные
+                                мнения и клубный рейтинг.</p>
+                        </div>
+                    </article>
 
-                    <!-- Колонка 3 -->
-                    <div class="faq-column">
-                        <article class="faq-item">
-                            <div class="faq-question">
-                                <span class="faq-icon" aria-hidden="true">🚪</span>
-                                <h3 class="faq-title">Как вступить?</h3>
-                            </div>
-                            <p class="faq-answer">Просто приходи! Узнаешь нас по фото в групке или по горящим глазам.
-                            </p>
-                        </article>
-                        <article class="faq-item">
-                            <div class="faq-question">
-                                <span class="faq-icon" aria-hidden="true">📢</span>
-                                <h3 class="faq-title">Где следить за анонсами?</h3>
-                            </div>
-                            <p class="faq-answer">ВК, ТГ-бот и сайт. Все ссылки тут: <a href="#contacts"
-                                    class="gradient-link">в разделе контактов</a>.</p>
-                        </article>
-                    </div>
+                    <article class="faq-item">
+                        <div class="faq-icon">👑</div>
+                        <div class="faq-content">
+                            <h3 class="faq-title">Кто выбирает фильмы?</h3>
+                            <p class="faq-answer">Наш "кино-диктатор", но иногда учитываем мнение народа.</p>
+                        </div>
+                    </article>
+
+                    <article class="faq-item">
+                        <div class="faq-icon">🚪</div>
+                        <div class="faq-content">
+                            <h3 class="faq-title">Как вступить?</h3>
+                            <p class="faq-answer">Просто приходи! Узнаешь нас по горящим глазам.</p>
+                        </div>
+                    </article>
+
+                    <article class="faq-item">
+                        <div class="faq-icon">📢</div>
+                        <div class="faq-content">
+                            <h3 class="faq-title">Где следить?</h3>
+                            <p class="faq-answer">ВК, ТГ-бот и сайт. Все ссылки <a href="#contacts"
+                                    class="gradient-link">в контактах</a>.</p>
+                        </div>
+                    </article>
                 </div>
 
-                <!-- Изображение участников КК -->
-                <div class="image-container-wrapper fade-in delay-3">
-                    <figure class="image-container">
-                        <img src="../images/image-container.jpg" alt="Участники киноклуба на встрече" class="main-image"
-                            loading="lazy">
-                        <figcaption class="cine-logo">Киноклуб "ОДИССЕЯ"</figcaption>
-                    </figure>
+                <!-- Изображение -->
+                <div class="image-optimized">
+                    <img src="../images/image-container.jpg" alt="Участники киноклуба на встрече" loading="lazy"
+                        decoding="async" width="1200" height="500">
+                    <span class="image-caption">Киноклуб "ОДИССЕЯ"</span>
                 </div>
 
-                <!-- Цитата под карточками -->
-                <blockquote class="about__quote fade-in delay-2">
-                    <div class="quote-icon" aria-hidden="true">❝</div>
+                <!-- Цитата -->
+                <blockquote class="quote-optimized">
+                    <div class="quote-mark">❝</div>
                     <p>"Киноклуб Одиссея - объективностью здесь и не пахнет! (с)"</p>
-                    <cite class="quote-author">— Неизвестный критик</cite>
+                    <cite>— Неизвестный критик</cite>
                 </blockquote>
             </div>
         </section>
