--- a/assets/pages/Interactive-game.html
+++ b/assets/pages/Interactive-game.html
@@ -21,15 +21,28 @@
 <body>
     <!-- Шапка -->
     <header class="header">
-        <a href="index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
-            <div class="logo__icon"></div>
-            ОДИССЕЯ
-        </a>
+        <div class="header__inner container">
+            <!-- Логотип слева -->
+            <a href="index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
+                <div class="logo__icon"></div>
+                <span class="logo__text">ОДИССЕЯ</span>
+            </a>
 
-        <!-- Контейнер для навигации -->
-        <div class="nav-container"></div>
+            <!-- Виджет погоды посередине -->
+            <div class="weather-widget">
+                <!-- Содержимое виджета -->
+            </div>
 
-        <button class="mobile-menu-btn" aria-label="Меню" aria-expanded="false">☰</button>
+            <!-- Навигация справа -->
+            <nav class="nav-container"></nav>
+
+            <!-- Кнопка мобильного меню -->
+            <button class="mobile-menu-btn" aria-label="Меню" aria-expanded="false">
+                <span class="burger-line"></span>
+                <span class="burger-line"></span>
+                <span class="burger-line"></span>
+            </button>
+        </div>
     </header>
 
     <!-- Герой секция -->
