--- a/assets/pages/stanislav.html
+++ b/assets/pages/stanislav.html
@@ -695,7 +695,7 @@
     <header class="header">
         <div class="header__inner container">
             <!-- Логотип слева -->
-            <a href="../index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
+            <a href="../pages/index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
                 <div class="logo__icon"></div>
                 <span class="logo__text">ОДИССЕЯ</span>
             </a>
@@ -1059,7 +1059,7 @@
 
             <!-- Кнопка возврата -->
             <div class="odyssey-home-button fade-in delay-3">
-                <a href="../index.html" class="odyssey-btn">← Вернуться на главную Одиссея</a>
+                <a href="../pages/index.html" class="odyssey-btn">← Вернуться на главную Одиссея</a>
             </div>
         </div>
     </main>
